samples/_failures_safe/1761315072_7a1a55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78e5d44b.c: In function ‘run_state_machine’:
./samples/SAFE/__tmp_78e5d44b.c:187:57: error: expected ‘)’ at end of input
  187 |                 next_state = handle_processing(sm, event
      |                                               ~         ^
      |                                                         )
./samples/SAFE/__tmp_78e5d44b.c:187:17: error: expected declaration or statement at end of input
  187 |                 next_state = handle_processing(sm, event
      |                 ^~~~~~~~~~
./samples/SAFE/__tmp_78e5d44b.c:187:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78e5d44b.c:187:17: error: expected declaration or statement at end of input
